# A-Maze-ing

./: .gitignore  Makefile  config.txt  maze.txt  pyproject.toml
src/: a_maze_ing.py  config.py  output.py
src/algorithms/: generator.py  pathfinder.py
src/maze/: cell.py  maze.py  pattern.py  side.py
src/rendering/: render_theme.py  renderer.py
src/terminal_app/: camera.py  colors_menu.py  config_error_handler.py  maze_config_menu.py  maze_terminal_app.py  menu_display.py  screen_context.py  terminal_menu.py  theme_menu.py
src/terminal_app/colors_menu/: colors_menu.py  object_color_menu.py  theme_menu.py
src/terminal_app/generation_menu/: generation_menu.py
src/terminal_app/main_menu/: maze_terminal_app.py
src/terminal_app/options_menu/: options_menu.py
src/terminal_app/options_menu/colors_menu/: colors_menu.py  theme_menu.py
src/terminal_app/options_menu/generation_menu/: generation_menu.py
src/terminal_app/options_menu/pattern_menu/: pattern_menu.py  pattern_position_menu.py
src/terminal_app/pattern_menu/: pattern_location_menu.py  pattern_menu.py  pattern_position_menu.py
