[tool.poetry]
name = "A-Maze-ing"
version = "0.1.0"
description = "Amazing maze generator and solver!"
authors = ["Mathias"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
